<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/container">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="111dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/orange"
            android:text="NEXT"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:cornerRadius="20dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="20dp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/text_views"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginBottom="14dp"
            android:layout_gravity="bottom|end"
            android:textAlignment="viewEnd"
            android:maxLines="1"
            android:text="@string/text_zero"
            android:textColor="@color/white"
            android:textSize="40sp" />

    </FrameLayout>



<LinearLayout
    android:id="@+id/container"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:paddingHorizontal="14dp"
        android:paddingVertical="7dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:text="@string/ac"
            android:id="@+id/btn_ac"
            style="@style/Gray.Button"
            android:onClick="onNumberClick" />
        <com.google.android.material.button.MaterialButton
            android:text="@string/plus_minus"
            android:id="@+id/btn_plus_minus"
            style="@style/Gray.Button"
            android:layout_marginHorizontal="14dp"
            android:onClick="onOperationClick"/>
        <com.google.android.material.button.MaterialButton
            android:text="@string/percent"
            android:id="@+id/btn_percent"
            style="@style/Gray.Button"
          android:layout_marginEnd="14dp"
            android:onClick="onOperationClick"/>
        <com.google.android.material.button.MaterialButton
            android:text="@string/division"
            android:id="@+id/btn_division"
            style="@style/Orange.Button"
            android:onClick="onOperationClick"/>

    </LinearLayout>
    <LinearLayout
        android:paddingHorizontal="14dp"
        android:paddingVertical="7dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:text="@string/seven"
            android:id="@+id/btn_seven"
            style="@style/Gray.Dark.Button"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            android:text="@string/eight"
            android:id="@+id/btn_eight"
            style="@style/Gray.Dark.Button"
            android:layout_marginHorizontal="14dp"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            android:text="@string/nine"
            android:id="@+id/btn_nine"
            style="@style/Gray.Dark.Button"
          android:layout_marginEnd="14dp"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            android:text="@string/multiplication"
            android:id="@+id/btn_multiplication"
            style="@style/Orange.Button"
            android:onClick="onOperationClick"/>

    </LinearLayout>
    <LinearLayout
        android:paddingHorizontal="14dp"
        android:paddingVertical="7dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:text="@string/four"
            android:id="@+id/btn_four"
            style="@style/Gray.Dark.Button"
            android:onClick="onNumberClick" />
        <com.google.android.material.button.MaterialButton
            android:text="@string/five"
            android:id="@+id/btn_five"
            style="@style/Gray.Dark.Button"
            android:layout_marginHorizontal="14dp"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            android:text="@string/six"
            android:id="@+id/btn_six"
            style="@style/Gray.Dark.Button"
          android:layout_marginEnd="14dp"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            android:text="@string/minus"
            android:id="@+id/btn_minus"
            style="@style/Orange.Button"
            android:onClick="onOperationClick"/>

    </LinearLayout>
    <LinearLayout
        android:paddingHorizontal="14dp"
        android:paddingVertical="7dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:text="@string/one"
            android:id="@+id/btn_one"
            style="@style/Gray.Dark.Button"
            android:onClick="onNumberClick"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Gray.Dark.Button"
            android:id="@+id/btn_two"
            android:layout_marginHorizontal="14dp"
            android:text="@string/two"
            android:onClick="onNumberClick"/>

        <com.google.android.material.button.MaterialButton
            android:text="@string/three"
            android:id="@+id/btn_three"
            style="@style/Gray.Dark.Button"
          android:layout_marginEnd="14dp"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            android:text="@string/plus"
            android:id="@+id/btn_plus"
            style="@style/Orange.Button"
            android:onClick="onOperationClick"/>

    </LinearLayout>
    <LinearLayout
        android:paddingHorizontal="14dp"
        android:paddingVertical="7dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:text="@string/zero"
            android:id="@+id/btn_zero"
            android:layout_width="174dp"
            style="@style/Gray.Dark.Button"
            android:textAlignment="viewStart"
            android:paddingStart="30dp"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            android:text="@string/dot"
            android:id="@+id/btn_dot"
            style="@style/Gray.Dark.Button"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:onClick="onNumberClick"/>
        <com.google.android.material.button.MaterialButton
            android:text="@string/equals"
            android:id="@+id/btn_equals"
            style="@style/Orange.Button"
            android:onClick="onOperationClick"/>

    </LinearLayout>





</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>